Adjust page length for all desktop views, minor 'hack' fix for line between header and content on mobile view

--- a/src/style.css
+++ b/src/style.css
@@ -57,10 +57,12 @@
 
 *:not(dialog) {
   margin: 0;
+  padding: 0;
 }
 
 body, html {
-    height: 100vh;
+    min-height: -webkit-fill-available;
+    box-sizing: border-box;
 }
 
 body {
@@ -68,7 +70,8 @@ body {
     -webkit-font-smoothing: antialiased;
     background-color: var(--ash);
     overflow-x: hidden;
-
+    min-height: 100vh;
+    overflow-y: visible;
     min-width: 960px;
     color: var(--bone);
 }
@@ -105,7 +108,9 @@ nav, #content {
 
     font-family: "Cinzel Decorative";
     font-weight: bold;
-    font-size: clamp(2.5rem, 4vw, 3.5rem)
+    font-size: clamp(2.5rem, 4vw, 3.5rem);
+
+    border-bottom: 1px solid var(--blood);
 }
 
 .main-nav > button {
@@ -124,8 +129,9 @@ nav > button {
 }
 
 #content {
-    height: 100%;
+    min-height: max(100vh, 100%);
     padding-bottom: 2rem;
+    margin-top: -1px;
 }
 
 #center-title {
